# dex-sdk

./: Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  rustfmt.toml
abi/dex/: Errors.abi.json  Exchange.json  REVISION
abi/testing/: TestToken.json
crates/cli/: Cargo.toml  README.md
crates/cli/src/: account.rs  args.rs  block.rs  book.rs  lib.rs  main.rs  snapshot.rs  trace.rs  trades.rs  tx.rs
crates/sdk/: Cargo.toml  build.rs
crates/sdk/src/: abi.rs  error.rs  lib.rs  num.rs
crates/sdk/src/state/: account.rs  event.rs  exchange.rs  mod.rs  order.rs  perpetual.rs  position.rs
crates/sdk/src/state/l3_book/: error.rs  level.rs  mod.rs  order.rs  tests.rs  view.rs
crates/sdk/src/stream/: mod.rs  raw.rs  trade.rs
crates/sdk/src/testing/: account.rs  indexer.rs  mod.rs  perp.rs
crates/sdk/src/tests/: exchange.rs  exchange_funding.rs  mod.rs
crates/sdk/src/types/: event.rs  mod.rs  order.rs  request.rs  trade.rs
crates/sdk/tests/: all_positions_snapshot_and_updates.rs  events.rs  maintenance_margin_fraction_update.rs  order_book.rs  sc_v1173.rs  scenarios.rs  snapshot.rs
examples/: print_trades.rs
src/: abi.rs  error.rs  lib.rs  num.rs  stream.rs  types.rs
src/fill/: listener.rs
src/state/: account.rs  event.rs  exchange.rs  l2_book.rs  mod.rs  order.rs  perpetual.rs  position.rs
src/state/l3_book/: error.rs  level.rs  mod.rs
src/stream/: trade.rs
src/testing/: mod.rs
src/types/: event.rs  mod.rs  order.rs  request.rs
tests/: events.rs  snapshot.rs
